namespaces/live.cloud-platform.service.justice.gov.uk/justice-gov-uk-archiver-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: justice-gov-uk-archiver-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-intranet"
    cloud-platform.justice.gov.uk/application: "Justice Website Archiver"
    cloud-platform.justice.gov.uk/owner: "Central Digital: central-digital-product-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/justice-webiste-archive"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
    cloud-platform.justice.gov.uk/review-after: "2023-10-01"
